Spacing fix listing

--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -991,8 +991,9 @@
                     
                 }
                 .description {
-                    width: 100%;
-                    max-width:100%;
+                    width: 70%;
+                    max-width:none;
+                    
                 }
                 .text {
                     width:100%;
@@ -1012,7 +1013,7 @@
             .description {
                  margin-left: auto;
                  max-width: none;
-
+                 margin-right: 0;
             }
 
             .image_container {
